--- a/project-4-web/src/styles/App.css
+++ b/project-4-web/src/styles/App.css
@@ -2,7 +2,7 @@ body{
   text-align: center;
   background-color: darkcyan;
   height: 100vh;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
